--- a/src/dsp/modelling.ipynb
+++ b/src/dsp/modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from etl.utils import read_sql_table\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "import statsmodels.api as sm"
    ]
   },
@@ -99,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3498841479\n"
+      "3866886527\n"
      ]
     }
    ],
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -135,30 +136,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1581182860\n"
+      "1251774367\n"
      ]
     }
    ],
    "source": [
     "###Random Forest\n",
-    "rf_model = RandomForestRegressor()\n",
-    "rf_model.fit(X_train, y_train) #Train model\n",
+    "#Documentation https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html\n",
+    "rf_model = RandomForestRegressor(n_estimators = 200, bootstrap=True) #200 trees\n",
+    "rf_model.fit(X_train, y_train)\n",
     "y_pred_rf = rf_model.predict(X_test) #Test\n",
     "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
-    "print(round(mse_rf)) #1,581,182,860\n",
-    "#Performs significantly better than lm\n"
+    "print(round(mse_rf)) #1,540,289,685\n",
+    "#Performs significantly better than lm\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3906756583\n"
+      "4752477125\n"
      ]
     },
     {
@@ -172,16 +175,16 @@
    ],
    "source": [
     "###Support Vector Machines\n",
-    "svc_model = SVR()\n",
-    "svc_model.fit(X_train, y_train) #Train\n",
-    "y_pred_svc = svc_model.predict(X_test) #Test\n",
-    "mse_svc = mean_squared_error(y_test, y_pred_svc) #MSE\n",
-    "print(round(mse_svc)) #3,906,756,583"
+    "svm_model = SVR()\n",
+    "svm_model.fit(X_train, y_train) #Train\n",
+    "y_pred_svm = svm_model.predict(X_test) #Test\n",
+    "mse_svm = mean_squared_error(y_test, y_pred_svm) #MSE\n",
+    "print(round(mse_svm)) #3,906,756,583"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -189,21 +192,146 @@
      "output_type": "stream",
      "text": [
       "                    Model           MSE\n",
-      "0            Linear Model  3.498841e+09\n",
-      "1          Random Forrest  1.581183e+09\n",
-      "2  Support Vector Machine  3.906757e+09\n"
+      "0            Linear Model  3.866887e+09\n",
+      "1          Random Forrest  1.251774e+09\n",
+      "2  Support Vector Machine  4.752477e+09\n"
      ]
     }
    ],
    "source": [
     "#Comparing models\n",
     "mse_data = {'Model': ['Linear Model', 'Random Forrest', 'Support Vector Machine'],\n",
-    "            'MSE': [mse_lm, mse_rf, mse_svc]\n",
+    "            'MSE': [mse_lm, mse_rf, mse_svm]\n",
     "    }\n",
     "\n",
     "mse_df = pd.DataFrame(mse_data) #Make dataframe of MSE data\n",
     "\n",
     "print(mse_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementing cross validation on the three models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (Cross-validation): 3371586478\n",
+      "Standard Deviation of MSE (Cross-validation): 694220397\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Linear model CV\n",
+    "# Define a pipeline with StandardScaler and LinearRegression\n",
+    "pipeline = make_pipeline(StandardScaler(), LinearRegression())\n",
+    "\n",
+    "# Perform cross-validation\n",
+    "mse_scores_lm = -cross_val_score(pipeline, X_train, y_train, cv=10, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Calculate mean and standard deviation of MSE scores\n",
+    "mean_mse_lm = np.mean(mse_scores_lm)\n",
+    "std_mse_lm = np.std(mse_scores_lm)\n",
+    "\n",
+    "# Print mean squared error from cross-validation\n",
+    "print(\"Mean Squared Error (Cross-validation):\", round(mean_mse_lm))\n",
+    "print(\"Standard Deviation of MSE (Cross-validation):\", round(std_mse_lm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random forest CV\n",
+    "rf_model = RandomForestRegressor(n_estimators=200, bootstrap=True)\n",
+    "\n",
+    "#Cross-validation\n",
+    "mse_scores_rf = -cross_val_score(rf_model, X_train, y_train, cv=10, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Calculate mean and standard deviation of MSE scores\n",
+    "mean_mse_rf = np.mean(mse_scores_rf)\n",
+    "std_mse_rf = np.std(mse_scores_rf)\n",
+    "\n",
+    "# Train model on full training data\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "\n",
+    "# Calculate mse on the test set\n",
+    "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
+    "\n",
+    "# Print mse from cv and on test set\n",
+    "print(\"Mean Squared Error (Cross-validation):\", round(mean_mse_rf))\n",
+    "print(\"Standard Deviation of MSE (Cross-validation):\", round(std_mse_rf)) #Large variation in mse scores.\n",
+    "#Suggests that the splits from the small dataset has large influence on performance.\n",
+    "print(\"Mean Squared Error (Test set):\", round(mse_rf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (Cross-validation): 3753792972\n",
+      "Standard Deviation of MSE (Cross-validation): 915109063\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Support Vector Machines CV\n",
+    "svm_model = SVR()\n",
+    "\n",
+    "#CV\n",
+    "mse_scores_svm = -cross_val_score(svm_model, X_train, y_train, cv=10, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "# Calculate mean and standard deviation of MSE scores\n",
+    "mean_mse_svm = np.mean(mse_scores_svm)\n",
+    "std_mse_svm = np.std(mse_scores_svm)\n",
+    "\n",
+    "print(\"Mean Squared Error (Cross-validation):\", round(mean_mse_svm))\n",
+    "print(\"Standard Deviation of MSE (Cross-validation):\", round(std_mse_svm))"
    ]
   }
  ],
