--- a/src/dsp/modelling.ipynb
+++ b/src/dsp/modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,35 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   hour  consumption_kwh  spot_price_dkk  temp_mean_past1h  wind_speed_past1h  humidity_past1h  precip_past1h\n",
-      "0   0.0       143408.914      383.950012               5.2                3.7             88.0            0.0\n",
-      "1   1.0       136154.493      387.230011               4.5                3.9             91.0            0.0\n",
-      "2   2.0       130648.111      386.929993               3.8                4.0             93.0            0.0\n",
-      "3   3.0       126554.756      387.829987               3.2                4.2             95.0            0.0\n",
-      "4   4.0       131530.892      391.480011               3.3                4.1             96.0            0.0 \n",
-      "\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 647 entries, 0 to 646\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   hour               647 non-null    float64\n",
-      " 1   consumption_kwh    647 non-null    float64\n",
-      " 2   spot_price_dkk     647 non-null    float64\n",
-      " 3   temp_mean_past1h   647 non-null    float64\n",
-      " 4   wind_speed_past1h  647 non-null    float64\n",
-      " 5   humidity_past1h    647 non-null    float64\n",
-      " 6   precip_past1h      647 non-null    float64\n",
-      "dtypes: float64(7)\n",
-      "memory usage: 35.5 KB\n",
-      "None\n"
+      "consumption_kwh    201189.915519\n",
+      "dtype: float64\n"
      ]
     }
    ],
@@ -71,13 +51,14 @@
     "df['hour'] = df['hour'].astype('float64')\n",
     "df['spot_price_dkk'] = df['spot_price_dkk'].astype('float64')\n",
     "\n",
-    "print(df.head().to_string(), \"\\n\")\n",
-    "print(df.info())"
+    "#print(df.head().to_string(), \"\\n\")\n",
+    "#print(df.info())\n",
+    "print(df[['consumption_kwh']].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -103,54 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     hour  spot_price_dkk  temp_mean_past1h  wind_speed_past1h  \\\n",
-      "171   3.0      494.239990              -1.0                1.1   \n",
-      "477  21.0      716.400024               4.6                1.4   \n",
-      "249   9.0      461.429993               2.4                6.2   \n",
-      "574  22.0      469.649994               4.1                2.0   \n",
-      "185  17.0      624.400024               0.1                1.7   \n",
-      "..    ...             ...               ...                ...   \n",
-      "98    2.0      420.089996               2.4                4.5   \n",
-      "322  10.0      371.649994               8.7                5.2   \n",
-      "382  22.0      422.209991               1.5                3.3   \n",
-      "365   5.0      352.410004               5.7                4.4   \n",
-      "510   6.0      477.450012               6.9                4.2   \n",
-      "\n",
-      "     humidity_past1h  precip_past1h  \n",
-      "171             97.0            0.0  \n",
-      "477             99.0            0.0  \n",
-      "249             83.0            0.0  \n",
-      "574             97.0            0.1  \n",
-      "185             96.0            0.0  \n",
-      "..               ...            ...  \n",
-      "98              80.0            0.0  \n",
-      "322             94.0            0.0  \n",
-      "382             78.0            0.0  \n",
-      "365             92.0            0.0  \n",
-      "510             96.0            0.0  \n",
-      "\n",
-      "[517 rows x 6 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##Splitting dataset\n",
     "X = df[['hour', 'spot_price_dkk', 'temp_mean_past1h', 'wind_speed_past1h', 'humidity_past1h', 'precip_past1h']]\n",
     "y = df[['consumption_kwh']]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)\n",
-    "print(X_train)"
+    "#print(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -162,8 +109,8 @@
       "Dep. Variable:        consumption_kwh   R-squared:                       0.139\n",
       "Model:                            OLS   Adj. R-squared:                  0.129\n",
       "Method:                 Least Squares   F-statistic:                     13.76\n",
-      "Date:                Mon, 06 May 2024   Prob (F-statistic):           1.64e-14\n",
-      "Time:                        17:52:27   Log-Likelihood:                -6404.1\n",
+      "Date:                Sat, 11 May 2024   Prob (F-statistic):           1.64e-14\n",
+      "Time:                        11:25:49   Log-Likelihood:                -6404.1\n",
       "No. Observations:                 517   AIC:                         1.282e+04\n",
       "Df Residuals:                     510   BIC:                         1.285e+04\n",
       "Df Model:                           6                                         \n",
@@ -203,46 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:        consumption_kwh   R-squared:                       0.139\n",
-      "Model:                            OLS   Adj. R-squared:                  0.129\n",
-      "Method:                 Least Squares   F-statistic:                     13.76\n",
-      "Date:                Mon, 06 May 2024   Prob (F-statistic):           1.64e-14\n",
-      "Time:                        17:52:29   Log-Likelihood:                -6404.1\n",
-      "No. Observations:                 517   AIC:                         1.282e+04\n",
-      "Df Residuals:                     510   BIC:                         1.285e+04\n",
-      "Df Model:                           6                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const       2.006e+05   2567.816     78.117      0.000    1.96e+05    2.06e+05\n",
-      "x1          3376.6799   2762.208      1.222      0.222   -2050.027    8803.386\n",
-      "x2         -5152.8096   3067.238     -1.680      0.094   -1.12e+04     873.167\n",
-      "x3          -1.51e+04   2745.861     -5.500      0.000   -2.05e+04   -9706.788\n",
-      "x4          1.508e+04   3273.253      4.608      0.000    8653.800    2.15e+04\n",
-      "x5         -8385.0982   2862.602     -2.929      0.004    -1.4e+04   -2761.155\n",
-      "x6          2685.9411   2604.425      1.031      0.303   -2430.780    7802.662\n",
-      "==============================================================================\n",
-      "Omnibus:                      138.592   Durbin-Watson:                   2.022\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              346.853\n",
-      "Skew:                           1.347   Prob(JB):                     4.81e-76\n",
-      "Kurtosis:                       5.975   Cond. No.                         2.14\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Linear regression with scaling\n",
     "X_train_scale = StandardScaler().fit_transform(X_train)\n",
@@ -254,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +180,12 @@
     "X_test_scale = StandardScaler().fit_transform(X_test)\n",
     "y_pred_lm = est_fit.predict(sm.add_constant(X_test_scale))\n",
     "rmse_lm = root_mean_squared_error(y_test, y_pred_lm)\n",
-    "print(round(rmse_lm)) #3,498,841,479"
+    "print(round(rmse_lm)) #59151"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "39389\n"
+      "39900\n"
      ]
     }
    ],
@@ -301,20 +211,20 @@
     "rf_model.fit(X_train, y_train)\n",
     "y_pred_rf = rf_model.predict(X_test) #Test\n",
     "rmse_rf = root_mean_squared_error(y_test, y_pred_rf)\n",
-    "print(round(rmse_rf)) #1,540,289,685\n",
+    "print(round(rmse_rf)) #39837\n",
     "#Performs significantly better than lm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62504\n"
+      "62282\n"
      ]
     },
     {
@@ -329,38 +239,39 @@
    "source": [
     "###Support Vector Machines\n",
     "#Documentation: https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html\n",
-    "svm_model = SVR(C=1)\n",
+    "svm_model = SVR(kernel='linear', C=1000)\n",
     "svm_model.fit(X_train, y_train) #Train\n",
     "y_pred_svm = svm_model.predict(X_test) #Test\n",
     "rmse_svm = root_mean_squared_error(y_test, y_pred_svm) #RMSE\n",
-    "print(round(rmse_svm)) #3,906,756,583"
+    "print(round(rmse_svm)) #62416"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    Model           MSE\n",
-      "0            Linear Model  3.498841e+09\n",
-      "1          Random Forrest  1.628611e+09\n",
-      "2  Support Vector Machine  3.906757e+09\n"
+      "                    Model   RMSE\n",
+      "0            Linear Model  59151\n",
+      "1          Random Forrest  39274\n",
+      "2  Support Vector Machine  62504\n"
      ]
     }
    ],
    "source": [
     "#Comparing models\n",
+    "rmse_values = [rmse_lm, rmse_rf, rmse_svm]\n",
     "rmse_data = {'Model': ['Linear Model', 'Random Forrest', 'Support Vector Machine'],\n",
-    "            'RMSE': [rmse_lm, rmse_rf, rmse_svm]\n",
+    "            'RMSE': [round(value) for value in rmse_values]\n",
     "    }\n",
     "\n",
     "rmse_df = pd.DataFrame(rmse_data) #Make dataframe of RMSE data\n",
     "\n",
-    "print(rmse_df)"
+    "print(round(rmse_df))"
    ]
   },
   {
@@ -372,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (Cross-validation): 3531881852\n",
-      "Standard Deviation of MSE (Cross-validation): 1527924608\n"
+      "Root Mean Squared Error (Cross-validation): 58213\n",
+      "Standard Deviation of RMSE (Cross-validation): 11962\n"
      ]
     }
    ],
@@ -390,7 +301,7 @@
     "pipeline = make_pipeline(StandardScaler(), LinearRegression())\n",
     "\n",
     "# Perform cross-validation\n",
-    "rmse_scores_lm = -cross_val_score(pipeline, X_train, y_train, cv=10, scoring='neg_mean_squared_error')\n",
+    "rmse_scores_lm = -cross_val_score(pipeline, X_train, y_train, cv=10, scoring='neg_root_mean_squared_error')\n",
     "\n",
     "# Calculate mean and standard deviation of RMSE scores\n",
     "mean_rmse_lm = np.mean(rmse_scores_lm)\n",
@@ -403,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -438,9 +349,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (Cross-validation): 50940\n",
-      "Standard Deviation of RMSE (Cross-validation): 19242\n",
-      "Mean Squared Error (Test set): 39410\n"
+      "Root Mean Squared Error (Cross-validation): 51140\n",
+      "Standard Deviation of RMSE (Cross-validation): 19345\n",
+      "Root Mean Squared Error (Test set): 39528\n"
      ]
     }
    ],
@@ -465,7 +376,7 @@
     "rmse_rf = root_mean_squared_error(y_test, y_pred_rf)\n",
     "\n",
     "# Print rmse from cv and on test set\n",
-    "print(\"Root Mean Squared Error (Cross-validation):\", round(mean_rmse_rf)) #2,991,619,458\n",
+    "print(\"Root Mean Squared Error (Cross-validation):\", round(mean_rmse_rf)) #\n",
     "print(\"Standard Deviation of RMSE (Cross-validation):\", round(std_rmse_rf)) #Large variation in rmse scores.\n",
     "#Suggests that the splits from the small dataset has large influence on performance.\n",
     "print(\"Root Mean Squared Error (Test set):\", round(rmse_rf))"
@@ -473,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +424,7 @@
    ],
    "source": [
     "#Support Vector Machines CV\n",
-    "svm_model = SVR(C=100000)\n",
+    "svm_model = SVR(C=1000)\n",
     "\n",
     "#CV\n",
     "rmse_scores_svm = -cross_val_score(svm_model, X, y, cv=10, scoring='neg_root_mean_squared_error')\n",
@@ -524,6 +435,36 @@
     "\n",
     "print(\"Root Mean Squared Error (Cross-validation):\", round(mean_rmse_svm))\n",
     "print(\"Standard Deviation of RMSE (Cross-validation):\", round(std_rmse_svm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 CV Model  Mean RMSE    Std\n",
+      "0            Linear Model      58213  11962\n",
+      "1          Random Forrest      51143  19439\n",
+      "2  Support Vector Machine      55373  24705\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Comparing CV models\n",
+    "mean_rmse_values = [mean_rmse_lm, mean_rmse_rf, mean_rmse_svm]\n",
+    "mean_std_values = [std_rmse_lm, std_rmse_rf, std_rmse_svm]\n",
+    "rmse_data = {'CV Model': ['Linear Model', 'Random Forrest', 'Support Vector Machine'],\n",
+    "            'Mean RMSE': [round(value) for value in mean_rmse_values],\n",
+    "            'Std': [round(value) for value in mean_std_values]\n",
+    "        }\n",
+    "\n",
+    "rmse_df = pd.DataFrame(rmse_data) #Make dataframe of RMSE and std data\n",
+    "\n",
+    "print(rmse_df)"
    ]
   }
  ],
