--- a/src/dsp/modelling.ipynb
+++ b/src/dsp/modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -84,8 +84,8 @@
     "df = df[['hour', 'consumption_kwh', 'spot_price_dkk', 'temp_mean_past1h', 'wind_speed_past1h',\n",
     "    'humidity_past1h', 'precip_past1h']]\n",
     "\n",
-    "#Converting spot price to float64\n",
-    "df['spot_price_dkk'] = df['spot_price_dkk'].astype('float64')\n",
+    "#Converting spot price to float64 and from dkk/mwh to øre/kwh\n",
+    "df['spot_price_dkk'] = df['spot_price_dkk'].astype('float64')/10\n",
     "\n",
     "#Dummy encoding 'hour'\n",
     "hour_dummies = pd.get_dummies(df['hour'], prefix='hour').astype('float64')\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,30 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     consumption_kwh\n",
-      "0         143408.914\n",
-      "1         136154.493\n",
-      "2         130648.111\n",
-      "3         126554.756\n",
-      "4         131530.892\n",
-      "..               ...\n",
-      "642       187155.927\n",
-      "643       167505.560\n",
-      "644       157276.047\n",
-      "645       151904.994\n",
-      "646       134374.880\n",
-      "\n",
-      "[647 rows x 1 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##Splitting dataset\n",
     "X = df.drop('consumption_kwh', axis=1)\n",
@@ -185,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -197,8 +176,8 @@
       "Dep. Variable:        consumption_kwh   R-squared:                       0.410\n",
       "Model:                            OLS   Adj. R-squared:                  0.376\n",
       "Method:                 Least Squares   F-statistic:                     12.09\n",
-      "Date:                Wed, 15 May 2024   Prob (F-statistic):           3.56e-40\n",
-      "Time:                        17:29:30   Log-Likelihood:                -6306.6\n",
+      "Date:                Mon, 20 May 2024   Prob (F-statistic):           3.56e-40\n",
+      "Time:                        17:50:32   Log-Likelihood:                -6306.6\n",
       "No. Observations:                 517   AIC:                         1.267e+04\n",
       "Df Residuals:                     488   BIC:                         1.279e+04\n",
       "Df Model:                          28                                         \n",
@@ -207,7 +186,7 @@
       "                        coef    std err          t      P>|t|      [0.025      0.975]\n",
       "-------------------------------------------------------------------------------------\n",
       "const              1.966e+05   2.57e+04      7.663      0.000    1.46e+05    2.47e+05\n",
-      "spot_price_dkk      -48.0365     17.864     -2.689      0.007     -83.136     -12.937\n",
+      "spot_price_dkk     -480.3655    178.640     -2.689      0.007    -831.364    -129.367\n",
       "temp_mean_past1h  -7873.3077    859.566     -9.160      0.000   -9562.215   -6184.401\n",
       "wind_speed_past1h  6560.0689   1857.109      3.532      0.000    2911.153    1.02e+04\n",
       "humidity_past1h     327.9339    251.863      1.302      0.194    -166.936     822.804\n",
@@ -240,12 +219,12 @@
       "Omnibus:                      174.696   Durbin-Watson:                   1.963\n",
       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              637.340\n",
       "Skew:                           1.531   Prob(JB):                    4.01e-139\n",
-      "Kurtosis:                       7.495   Cond. No.                     7.96e+18\n",
+      "Kurtosis:                       7.495   Cond. No.                     1.62e+18\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The smallest eigenvalue is 2.08e-30. This might indicate that there are\n",
+      "[2] The smallest eigenvalue is 1.96e-30. This might indicate that there are\n",
       "strong multicollinearity problems or that the design matrix is singular.\n"
      ]
     }
@@ -261,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -273,8 +252,8 @@
       "Dep. Variable:        consumption_kwh   R-squared:                       0.410\n",
       "Model:                            OLS   Adj. R-squared:                  0.376\n",
       "Method:                 Least Squares   F-statistic:                     12.09\n",
-      "Date:                Wed, 15 May 2024   Prob (F-statistic):           3.56e-40\n",
-      "Time:                        17:22:32   Log-Likelihood:                -6306.6\n",
+      "Date:                Mon, 20 May 2024   Prob (F-statistic):           3.56e-40\n",
+      "Time:                        14:11:00   Log-Likelihood:                -6306.6\n",
       "No. Observations:                 517   AIC:                         1.267e+04\n",
       "Df Residuals:                     488   BIC:                         1.279e+04\n",
       "Df Model:                          28                                         \n",
@@ -336,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48017\n"
+      "47944\n"
      ]
     }
    ],
@@ -388,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +407,7 @@
      "text": [
       "                    Model   RMSE\n",
       "0            Linear Model  52962\n",
-      "1          Random Forrest  48017\n",
+      "1          Random Forrest  47944\n",
       "2  Support Vector Machine  59363\n"
      ]
     }
@@ -454,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -520,9 +499,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (Cross-validation): 52270\n",
-      "Standard Deviation of RMSE (Cross-validation): 20524\n",
-      "Root Mean Squared Error (Test set): 48321\n"
+      "Root Mean Squared Error (Cross-validation): 52405\n",
+      "Standard Deviation of RMSE (Cross-validation): 20374\n",
+      "Root Mean Squared Error (Test set): 47603\n"
      ]
     }
    ],
@@ -555,9 +534,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (Cross-validation): 58424\n",
+      "Standard Deviation of RMSE (Cross-validation): 26623\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -583,14 +570,6 @@
       "/Users/frederikjacobsen/Repos/au-data-science-project/.venv/lib/python3.9/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error (Cross-validation): 58424\n",
-      "Standard Deviation of RMSE (Cross-validation): 26623\n"
-     ]
     }
    ],
    "source": [
@@ -610,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +598,7 @@
      "text": [
       "                 CV Model  Mean RMSE    Std\n",
       "0            Linear Model      50861   9730\n",
-      "1          Random Forrest      52270  20524\n",
+      "1          Random Forrest      52405  20374\n",
       "2  Support Vector Machine      58424  26623\n"
      ]
     }
